--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
+    "qrcode-terminal": "^0.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "whatsapp-web.js": "^1.19.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
